<resources>
    <string name="app_name">IMS Auto Parts Store</string>

    <string name="welcome_screen_title">Inventory Management</string>

    <string name="button_supplier">Suppliers</string>
    <string name="button_inventory">My Inventory</string>

    <string name="accessibility_supplier">Supplier</string>
    <string name="accessibility_inventory">Inventory</string>

    <string name="supplier_name">Castrol</string>
    <string name="supplier_address">15564 Fake Address ln, US 41864</string>
    <string name="supplier_contact">Fake Person</string>
    <string name="supplier_email">IHaveFakeEmail@gmail.com</string>
    <string name="supplier_phone">313-314-5554</string>
    <string name="supplier_id">15564B</string>

    <string name="error_blank">Order QTY blank</string>

    /*
    * Inventory Control Strings for an Item RV
    */
    <string name="inventory_part_number">Part Number: 1225G1550</string>
    <string name="inventory_name">CRC Throttle Body And Air-Intake Cleaner (12 wt. oz.)</string>
    <string name="inventory_quantity">Sales Floor: 55</string>
    <string name="inventory_in_back">In Back: 0</string>
    <string name="inventory_supplier_number">Primary Supplier: 155649</string>
    <string name="inventory_max_control">Max Control: 90</string>
    <string name="inventory_enabled">Active</string>
    <string name="inventory_sales_cost">Sales cost: $15.25</string>
    <string name="inventory_pending">pending: 15</string>

    <string name="order_hint">Order amount</string>
    <string name="order_button">Submit Order Request</string>

    <string name="prefix_part_number">Part Number: </string>
    <string name="prefix_inventory_quantity">Sales Floor: </string>
    <string name="prefix_inventory_in_back">In Back: </string>
    <string name="prefix_inventory_supplier_number">Primary Supplier: </string>
    <string name="prefix_inventory_max_control">Max Control: </string>
    <string name="prefix_inventory_sales_cost">Sales cost: </string>
    <string name="prefix_inventory_pending">pending: </string>

    <string name="inventory_inactive">Inactive</string>
    <string name="order_submited">Pending Order Submitted</string>
    <string name="unknown_error">Something went wrong - clear app data</string>
    <string name="pending_order_success">New Pending Order Created</string>
    <string name="title_activity_create_order">Manage My Ordering</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="review">Reviews</string>
    <string name="order">Order</string>
    <string name="order_finalize">Finalize</string>
    <string name="accessibility_orders">My Orders</string>
    <string name="button_orders">Manage Orders</string>
    <string name="approve_order">Approve</string>
    <string name="approve_pending">Approve</string>
    <string name="reject_pending">Reject</string>
    <string name="approved">Approved Order: 15</string>
    <string name="prefix_inventory_approved">Approved-Order Amount:</string>
    <string name="instruction_ordering">Approve orders below. If there is none to approve then go to My Inventory and create pending orders.</string>
    <string name="item_info">Part Info</string>
    <string name="order_number_generate_button">Generate New Order Number</string>
    <string name="create_new_order">Create New Order</string>
    <string name="hint_comment">Comment</string>
    <string name="inventory_item">Select Inventory Item</string>
    <string name="supplier_info">Select Supplier Info</string>
    <string name="add_inventory_item">Add Inventory Item</string>
    <string name="extended_amount">Add Extended Amount and Quantity</string>
    <string name="add_to_order">Add To Order</string>
    <string name="end_order">Send To Finalize Order</string>
    <string name="generated_order_number">Generated Order Number:</string>
    <string name="prefix_generated_order_number">Generated Order Number:</string>
    <string name="error_order_number_generation">Order Number Generation Failure - Please Consult Admin</string>
    <string name="directions_select_supplier">Select Supplier For Order</string>
    <string name="button_select_supplier">Select Supplier For Order</string>
    <string name="open_supplier_selector">Select Supplier For Order</string>
    <string name="title_activity_select_supplier">Select Supplier</string>
    <string name="supplier_added_to_order">Supplier added to order</string>
    <string name="prefix_supplier_order">Supplier for Order:</string>
    <string name="select_inventory">Add To Order</string>
    <string name="title_activity_select_approved">Select To Add To Order</string>
    <string name="added_to_order">Added Item To Order</string>
    <string name="quantity_to_order">Enter Quantity To Order</string>
    <string name="extended_cost">Enter Extended Line Cost</string>
    <string name="order_number_example">Order: </string>
    <string name="order_number_prefix">Order: </string>
    <string name="error_supplier">Error with Supplier Consult Admin</string>
    <string name="select_order_for_finalization">Select Order For Finalization</string>
    <string name="select_order_instructions">Select the order for review.</string>
    <string name="title_activity_select_finalize_order">Select Order</string>
    <string name="select_order_for_finalization_button">Select Order</string>
    <string name="example_supplier">Supplier: Select New Order</string>
    <string name="example_order_number">Order: Select New Order</string>
    <string name="prefix_order_number">Order Number :</string>
    <string name="prefix_supplier">Supplier Number:</string>
    <string name="toast_order_selected">Order Selected</string>
    <string name="order_supplier_number">Supplier : 1259P</string>
    <string name="order_inventory_label">Items on Order</string>
    <string name="button_accept_order">Accept Order</string>
    <string name="button_reject_order">Reject Order</string>
    <string name="part_info">Part Info</string>
    <string name="example_extended_cost">Extended Cost: 5.55</string>
    <string name="quantity_on_Order">Quantity On This Order: 5</string>
    <string name="prefix_quantity_on_order">Quantity on Order:</string>
    <string name="prefix_extended_cost">Extended Cost:</string>
    <string name="no_current_order_error">No Current Order</string>
    <string name="warning_order_is_more_than_approval">This Order Is More then the Approved Quantity for the following item.</string>
    <string name="warning_order_is_over_capacity">This order is over Max-Capacity control for the following item.</string>
    <string name="example_error">Example Error</string>
    <string name="error_nothing_to_delete">Nothing to Delete</string>
    <string name="error_no_supplier">Choose a Supplier</string>
    <string name="error_choose_a_supplier_or_inventory">Choose supplier or inventory</string>
    <string name="null_order">Select an Order (none currently)</string>
    <string name="id_prefix">Customer ID:</string>
    <string name="button_customers">Customers</string>
    <string name="title_activity_specialty_orders">Create Specialty Orders</string>
    <string name="button_specialty_orders">Specialty Orders</string>
    <string name="introduction_specialty_orders">Match a customer to a previous purchase order.</string>
    <string name="no_current_order_selected">Select an Order</string>
    <string name="no_current_customer_selected">Select Customer for Order</string>
    <string name="select_order">Select Order</string>
    <string name="select_customer">Select Customer For Order</string>
    <string name="finalize">Finalize Specialty Purchase Order</string>
    <string name="error_state">Activity cannot find STATE</string>
    <string name="prefix_order_info">Current Order Selection is order number:</string>
    <string name="prefix_customer_id">Customer ID:</string>
    <string name="prefix_customer_name">Customer Name:</string>
    <string name="prefix_customer_email">Email:</string>
    <string name="prefix_customer_phone_number">Phone Number:</string>
    <string name="prefix_customer_address">Customer Address</string>
    <string name="prefix_current_customer">Current Customer ID:</string>
    <string name="error_not_valid_specialty">Either Customer Or Order is not Selected.</string>
    <string name="total">Total:</string>
    <string name="sale_id">Sale ID:</string>
    <string name="customer_number">Customer:</string>
    <string name="title_activity_select_sale">Select Sale</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sales_caption">Sales</string>
    <string name="select_sale_to_view">Select Sale to View</string>
    <string name="select_sale">Select Sale</string>
    <string name="prefix_sale_id">Sale ID:</string>
    <string name="prefix_customer_number">Customer Number:</string>
    <string name="prefix_sale_price">Sale Price:</string>
    <string name="prefix_total_order">Total Order:</string>
    <string name="prefix_line">Line:</string>
    <string name="prefix_part">Part:</string>
    <string name="prefix_amount">Total Amount:</string>
    <string name="prefix_sale_amount">Sale Amount:</string>
    <string name="prototype_not_implemented">Prototype Not Implemented</string>
    <string name="on_hand_change">On Hand Change</string>
    <string name="on_hand_request">Edit Inventory</string>
    <string name="title_activity_sa">sa</string>
    <string name="title_activity_example">example</string>
    <string name="title_activity_ex">ex</string>
    <string name="scan_item">Scan For Item</string>
    <string name="edit_supplier">Edit Supplier</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="search_customer">Search Customer</string>
    <string name="title_activity_select_customer">Select Customer</string>
    <string name="search_supplier">Search for Supplier</string>
</resources>