<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/orderNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/partInfo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/supplierNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/warning"
        app:layout_constraintTop_toBottomOf="@+id/partInfo" />

    <TextView
        android:id="@+id/partInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/part_info"
        app:layout_constraintBottom_toTopOf="@+id/supplierNumber"
        app:layout_constraintTop_toBottomOf="@+id/orderNumber" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_error"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/partNumber"
        app:layout_constraintTop_toBottomOf="@+id/supplierNumber" />

    <TextView
        android:id="@+id/partNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory_part_number"
        app:layout_constraintBottom_toTopOf="@+id/partDescription"
        app:layout_constraintTop_toBottomOf="@+id/warning" />

    <TextView
        android:id="@+id/partDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory_name"
        app:layout_constraintBottom_toTopOf="@+id/maxControl"
        app:layout_constraintTop_toBottomOf="@+id/partNumber" />

    <TextView
        android:id="@+id/maxControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory_max_control"
        app:layout_constraintBottom_toTopOf="@+id/isEnabled"
        app:layout_constraintTop_toBottomOf="@+id/partDescription" />

    <TextView
        android:id="@+id/isEnabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory_enabled"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/quantityOnhand"
        app:layout_constraintTop_toBottomOf="@+id/maxControl" />

    <TextView
        android:id="@+id/quantityOnhand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory_quantity"
        app:layout_constraintBottom_toTopOf="@+id/quantityInBack"
        app:layout_constraintTop_toBottomOf="@+id/isEnabled" />

    <TextView
        android:id="@+id/quantityInBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory_in_back"
        app:layout_constraintBottom_toTopOf="@+id/supplier"
        app:layout_constraintTop_toBottomOf="@+id/quantityOnhand" />

    <TextView
        android:id="@+id/supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory_supplier_number"
        app:layout_constraintBottom_toTopOf="@+id/sales"
        app:layout_constraintTop_toBottomOf="@+id/quantityInBack" />

    <TextView
        android:id="@+id/sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory_sales_cost"
        app:layout_constraintBottom_toTopOf="@+id/approved"
        app:layout_constraintTop_toBottomOf="@+id/supplier" />

    <TextView
        android:id="@+id/approved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/approved"
        app:layout_constraintBottom_toTopOf="@+id/extendedCost"
        app:layout_constraintTop_toBottomOf="@+id/sales" />

    <TextView
        android:id="@+id/extendedCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_extended_cost"
        app:layout_constraintBottom_toTopOf="@+id/quantityOnOrder"
        app:layout_constraintTop_toBottomOf="@+id/approved" />

    <TextView
        android:id="@+id/quantityOnOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity_on_Order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extendedCost" />

</androidx.constraintlayout.widget.ConstraintLayout>