<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/partDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supplier_name"
        app:layout_constraintBottom_toTopOf="@+id/id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supplier_id"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/partDescription" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supplier_address"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supplier_contact"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supplier_email"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supplier_phone"
        app:layout_constraintBottom_toTopOf="@+id/selectSupplier"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/selectSupplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_supplier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

</android.support.constraint.ConstraintLayout>