<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/partNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory_part_number"
        app:layout_constraintBottom_toTopOf="@+id/to_order"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/to_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/quantity_to_order"
        app:layout_constraintBottom_toTopOf="@+id/cost"
        app:layout_constraintTop_toBottomOf="@+id/partNumber" />

    <EditText
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/extended_cost"
        app:layout_constraintTop_toBottomOf="@+id/to_order" />

</android.support.constraint.ConstraintLayout>